--- a/TSConf.qsf
+++ b/TSConf.qsf
@@ -285,3 +285,6 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:build_id_verilog.tc
 set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name QIP_FILE files.qip
 set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
+set_global_assignment -name SYSTEMVERILOG_FILE TSConf.sv
+set_global_assignment -name SDC_FILE TSConf.sdc
+
