--- a/TSConf.qsf
+++ b/TSConf.qsf
@@ -274,21 +274,16 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to UART_TX
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to SPI_DO
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to CONF_DATA0
 
-
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:build_id_verilog.tcl"
 
-
-set_global_assignment -name QIP_FILE pll.qip
+set_global_assignment -name QIP_FILE mist/cyc3/pll.qip
 set_global_assignment -name QIP_FILE files.qip
-set_global_assignment -name QIP_FILE "mist-modules/mist.qip"
+set_global_assignment -name QIP_FILE "mist/mist-modules/mist.qip"
 set_global_assignment -name SYSTEMVERILOG_FILE TSConf.sv
 set_global_assignment -name SDC_FILE TSConf.sdc
-
-
-
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
