--- a/TSConf.qsf
+++ b/TSConf.qsf
@@ -283,7 +283,7 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:build_id_verilog.tc
 set_global_assignment -name QIP_FILE mist/cyc3/pll.qip
 set_global_assignment -name QIP_FILE files.qip
 set_global_assignment -name QIP_FILE "mist/mist-modules/mist.qip"
-set_global_assignment -name SYSTEMVERILOG_FILE TSConf.sv
+set_global_assignment -name SYSTEMVERILOG_FILE TSConf_top.sv
 set_global_assignment -name SDC_FILE TSConf.sdc
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
