--- a/TSConf_poseidon-ep4cgx150.qsf
+++ b/TSConf_poseidon-ep4cgx150.qsf
@@ -479,9 +479,9 @@ set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:build_id_verilog.tc
 set_global_assignment -name VERILOG_FILE mist/cyc4gx/pll.v
 set_global_assignment -name QIP_FILE files.qip
 set_global_assignment -name QIP_FILE "mist/mist-modules/mist.qip"
-set_global_assignment -name VERILOG_FILE mist/sigma_delta_dac.v
+#set_global_assignment -name VERILOG_FILE mist/sigma_delta_dac.v
 set_global_assignment -name VHDL_FILE mist/dac_dsm2v.vhd
-set_global_assignment -name SYSTEMVERILOG_FILE TSConf.sv
+set_global_assignment -name SYSTEMVERILOG_FILE TSConf_top.sv
 set_global_assignment -name SDC_FILE TSConf.sdc
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
